k8s/vpn/vpn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn-ingress
  namespace: vpn
  annotations:
    nginx.org/server-snippets: |
      ssl_verify_client on;
      ssl_client_certificate /etc/nginx/secrets/vpn-home-ca-key-pair;
      ssl_verify_depth 1;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "transmission.minikube.home.lab"
    secretName: lab-nginx-certificate
  - hosts:
    - "transmission.aramismatos1.com"
    secretName: nginx-certificate-secret
  - secretName: home-ca-key-pair
  rules:
  - host: "transmission.minikube.home.lab"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 9091
  - host: "transmission.aramismatos1.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 9091
